--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <p class="gallery-text"> </p>Power Fascinating </p>
             </article>
         </section>
-        <article class=" about">
-            <h1>Everything Never Enough <br>Just Fashion</h1>
+        <article class="about">
+            <h2>Everything Never Enough <br>Just Fashion</h2>
             Just Fashion
             <p>Praesent placerat eros eget lacus ullamcorper, id dapibus ante vestibulum. Curabitur quis condimentum
                 diam. Duis
@@ -75,18 +75,22 @@
                 bibendum lobortis quam, nec sollicitudin nisl volutpat at.</p>
 
         </article>
-        <div id="contact"></div>
-        <adress>Call me now for design<br>012-1234-4567</adress>
-        <div class="maps"></div>
-        mapa do google
+    <div id="contact">
+        <address> 
+            Call me now for design<br>
+            012-1234-4567 
+        </address>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28060.99347780634!2d-52.834429
+        <div class="maps">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28060.99347780634!2d-52.834429
         872103 215!3d-28.460743229078286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fd493c92d28
         c8f%3A0x6ff21ca741cec0c8!2sN%C3%A3o-Me-Toque%2C%20RS%2C%2099470-000!5e0!3m2!1spt-BR!2sbr!4v161706
         4691121!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
        </iframe>
-        
-        <footer> Copyright &copy; fastfashion.com</footer>
+        </div>
+    
+    </div>
+        <footer class="rodape"> Copyright &copy; fastfashion.com</footer>
     </div>
 </body >
 </html>
