alteracao botato header

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                     <li> <a href="#">Portifolio</a> </li>
                     <li> <a href="#">About us</a> </li>
                     <li> <a href="#">Contact</a></li>
+                    <li> <a href="#">Companies</a></li>
+                </ul>
                 </ul>
             </nav>
 
