segunda pg / aba/portifolio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#"> <img class="logotipo" src="imagens/logo.png" alt=" logotipo fashion"> </a>
             <nav class="header-nav">
                 <ul>
-                    <li> <a href="#">Portifolio</a> </li>
+                    <li> <a href="pag2.html">Portifolio</a> </li>
                     <li> <a href="#">About us</a> </li>
                     <li> <a href="#">Contact</a></li>
                     <li> <a href="#">Companies</a></li>
